# UserBot

./: .gitignore  README.md  __main__.py  alembic.ini  config.example.toml  config.toml  config.toml.example  main.py  mypy.ini  pyproject.toml  requirements.txt  sessions.toml  userbot.service
commands/: __init__.py  dev.py  logger.py  message.py  readme.md  social.py  templates.py  to_delete.py
commands/qiwi/: __init__.py  get_balance.py  payment.py
database/: message.py
dispatching/: __init__.py  callback.py  filters.py  routing.py
migrations/: env.py
migrations/versions/: 0ac59cdd5c87_init.py  25fc8a87aa8c_added_group_id_column_to_sessions_table.py  53a60a83b293_added_new_table_settings.py  60b1cfa7d4cc_rename_column_key_to_name_of_settings_.py
src/api/: __init__.py  error_handlers.py
src/commands/: __init__.py  chats.py  develop.py  dialogs.py  session.py  social.py  templates.py  test_command.py
src/commands/base/: __init__.py  command.py  errors.py  filters.py  handler.py  manage.py  manager.py  module.py  types.py
src/commands/filters/: __init__.py  base.py  (+3 more)
src/config/: parser.py
src/database/: __init__.py  attachment.py  connector.py  deactivate_modules.py  session.py  settings.py  template.py
src/dispatching/: __init__.py  dispatcher.py  event.py  filters.py  longpoll.py  middlewares.py  result_caster.py
src/routers/: __init__.py  new_message.py
src/services/: __init__.py
src/sessions/: __init__.py  errors.py  from_database.py  from_file.py  manage.py  session.py
utils/: __init__.py  filters.py  logger.py  middleware.py  tools.py
(+12 files in other folders)
