[tool.poetry]
name = "UserBot"
version = "2.0.0"
description = "UserBot for VK"
authors = ["ZeN220 <hidden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
vkwave = "^0.2.17"
tortoise-orm = "^0.19.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
