[tool.poetry]
name = "UserBot"
version = "2.0.0"
description = "UserBot for VK"
authors = ["ZeN220 <hidden@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
toml = "^0.10.2"
vkwave = {git = "https://github.com/fscdev/vkwave.git", rev = "master"}
SQLAlchemy = "^1.4.40"
aiosqlite = "^0.17.0"
alembic = "^1.8.1"

systemd = {version = '0.16.1', optional = true}

[tool.poetry.extras]
systemd = ['systemd']

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
